refactor: 기존 dto 수정 및 songDownloadService 단순화